# private-pipy-s3

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.sh  mgr.py  pypi.yml  pyproject.toml
aws-pypi-s3/: admin.py  auth.py  publish.py
aws-pypi-s3/core/: storage.py  users.py  utils.py
core/: user.py
